--- a/Online_Retail_Customer_Segmentation_Capstone_Project.ipynb
+++ b/Online_Retail_Customer_Segmentation_Capstone_Project.ipynb
@@ -73,7 +73,7 @@
         "* ### StockCode: Product (item) code. Nominal, a 5-digit integral number uniquely assigned to each distinct product.\n",
         "* ### Description: Product (item) name. Nominal.\n",
         "* ### Quantity: The quantities of each product (item) per transaction. Numeric.\n",
-        "* ### InvoiceDate: Invice Date and time. Numeric, the day and time when each transaction was generated.\n",
+        "* ### InvoiceDate: Invoice Date and time. Numeric, the day and time when each transaction was generated.\n",
         "* ### UnitPrice: Unit price. Numeric, Product price per unit in sterling.\n",
         "* ### CustomerID: Customer number. Nominal, a 5-digit integral number uniquely assigned to each customer.\n",
         "* ### Country: Country name. Nominal, the name of the country where each customer resides."
@@ -99,7 +99,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 65,
+      "execution_count": null,
       "metadata": {
         "id": "X9hv1Z-a0yUU"
       },
@@ -123,7 +123,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 66,
+      "execution_count": null,
       "metadata": {
         "id": "5QWoQU5vRSk6"
       },
@@ -138,7 +138,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 67,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -165,7 +165,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 68,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -373,7 +373,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 69,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -581,7 +581,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 70,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -610,7 +610,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 71,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -648,7 +648,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 72,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -840,7 +840,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 73,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -881,7 +881,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 74,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -919,7 +919,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 75,
+      "execution_count": null,
       "metadata": {
         "id": "dSM7m-g2UVH3"
       },
@@ -931,7 +931,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 76,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -955,7 +955,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 77,
+      "execution_count": null,
       "metadata": {
         "id": "hFNvMHnVvs9S"
       },
@@ -967,7 +967,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 78,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -994,7 +994,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 79,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1031,7 +1031,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 80,
+      "execution_count": null,
       "metadata": {
         "id": "-XkENqnTdiS5"
       },
@@ -1046,7 +1046,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 81,
+      "execution_count": null,
       "metadata": {
         "id": "MgT22LWZYIDr"
       },
@@ -1058,7 +1058,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 82,
+      "execution_count": null,
       "metadata": {
         "id": "9SVeL7aNGe8H"
       },
@@ -1071,7 +1071,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 83,
+      "execution_count": null,
       "metadata": {
         "id": "S-3ilmvjX7uo",
         "colab": {
@@ -1240,7 +1240,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 84,
+      "execution_count": null,
       "metadata": {
         "id": "9uPqt8DKWqAx"
       },
@@ -1261,7 +1261,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 85,
+      "execution_count": null,
       "metadata": {
         "id": "7DQOkmi2tQn0",
         "colab": {
@@ -1301,7 +1301,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 86,
+      "execution_count": null,
       "metadata": {
         "id": "zG8XFrRIz1lW",
         "colab": {
@@ -1345,17 +1345,16 @@
       },
       "source": [
         "Observations/Hypothesis:\n",
-        "1. Most Customers are from United Kingdom. Considerable number of customers are also from Germany, France, EIRE and Spain. Whereas Saudi Arabia, Bahrain, Czech Republic, Brazil and Lithuania has lest number of customers \n",
-        "2. There are no orders placed on Saturdays. Looks like its a non working day for the retailer.\n",
-        "3. Most numbers of customers have purched the gifts in the month of November ,October and December September\n",
-        "less numbers of customers have purches the gifts in the month of April ,january and February.\n",
-        "4. Most of the customers have purched the items in Aftrnoon ,moderate numbers of customers have purched the items in Morning and the least in Evening.\n",
+        "1. Most Customers are from United Kingdom. Considerable number of customers are also from Germany, France, EIRE and Spain. Whereas Saudi Arabia, Bahrain, Czech Republic, Brazil and Lithuania has least number of customers \n",
+        "2. There are no orders placed on Saturdays. Looks like it's a non working day for the retailer.\n",
+        "3. Most of the customers have purchased the gifts in the month of November, October, December and September. Less number of customers have purchased the gifts in the month of April, January and February.\n",
+        "4. Most of the customers have purchased the items in Afternoon, moderate numbers of customers have purchased the items in Morning and the least in Evening.\n",
         "5. WHITE HANGING HEART T-LIGHT HOLDER, REGENCY CAKESTAND 3 TIER, JUMBO BAG RED RETROSPOT are the most ordered products"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 87,
+      "execution_count": null,
       "metadata": {
         "id": "hIiqROnd9w5k",
         "colab": {
@@ -1402,7 +1401,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 88,
+      "execution_count": null,
       "metadata": {
         "id": "VGtSZrJ4JfMV",
         "colab": {
@@ -1453,7 +1452,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 89,
+      "execution_count": null,
       "metadata": {
         "id": "6flP--XWlDYL",
         "colab": {
@@ -1627,7 +1626,7 @@
         "# Adding 1 day to the Last Invoice date to set as Latest date for reference\n",
         "LatestDate = df[\"InvoiceDate\"].max() + pd.DateOffset(days=1)\n",
         "\n",
-        "# Createing a new dataframe to calculate Recency, Frequency and Monetry scores for each customer\n",
+        "# Creating a new dataframe to calculate Recency, Frequency and Monetary scores for each customer\n",
         "rfm = df.groupby('CustomerID').agg({'InvoiceDate': lambda x: (LatestDate - x.max()).days,\n",
         "                                    'InvoiceNo': lambda x: len(x), 'TotalAmount': lambda x: x.sum()})\n",
         "\n",
@@ -1653,7 +1652,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 90,
+      "execution_count": null,
       "metadata": {
         "id": "hT55ol49ff_j"
       },
@@ -1677,13 +1676,13 @@
         "Interpretation:\n",
         "1. If the RFM of any customer is 444. His Recency is good, frequency is more and Monetary is more. So, he is a Big spender.\n",
         "2. If the RFM of any customer is 111. His Recency is low, frequency is low and Monetary is low. So, he is a little spender.\n",
-        "3. If the RFM of any customer is 144. His purchased a long time ago but buys frequently and spends more. And so on.\n",
+        "3. If the RFM of any customer is 144. He purchased a long time ago but buys frequently and spends more. And so on.\n",
         "4. Like this we can come up with number of segments for all combinations of R,F and M base on our usecase. Higher the RFM score, more valuable the customer is."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 91,
+      "execution_count": null,
       "metadata": {
         "id": "onkt3andMgYC",
         "colab": {
@@ -1924,7 +1923,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 92,
+      "execution_count": null,
       "metadata": {
         "id": "L3S73GfT4aJ0",
         "colab": {
@@ -2189,7 +2188,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 93,
+      "execution_count": null,
       "metadata": {
         "id": "g6xd5WAF4Ka6",
         "colab": {
@@ -2252,7 +2251,7 @@
         "id": "pq1u2fHLcN3m",
         "outputId": "a63138c5-ff23-4437-b98c-7a220774c4d8"
       },
-      "execution_count": 94,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2296,7 +2295,7 @@
       "metadata": {
         "id": "DyN9MXLCNnLv"
       },
-      "execution_count": 95,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2318,7 +2317,7 @@
       "metadata": {
         "id": "y6h08RYRMwZr"
       },
-      "execution_count": 96,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2348,7 +2347,7 @@
         "id": "9m7tqLORN9hj",
         "outputId": "3db8e8ae-5931-4519-97a8-2b3305fa8aae"
       },
-      "execution_count": 97,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2375,7 +2374,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 98,
+      "execution_count": null,
       "metadata": {
         "id": "iz9ovQkJUT2A",
         "colab": {
@@ -2430,7 +2429,7 @@
       "source": [
         "Observations:\n",
         "1. From the Elbow curve 5 appears to be at the elbow and hence can be considered as the number of clusters. n_clusters=4 or 6 can also be considered based of the objective of segmentation.\n",
-        "2. If we go by maximum Silhouette Score as the criteria for selecting optimal number of clusters, then n_clusters=2 can be choosen. 3 and 4 is also a good choise if we want more segments.\n",
+        "2. If we go by maximum Silhouette Score as the criteria for selecting optimal number of clusters, then n_clusters=2 can be chosen. 3 and 4 is also a good choice if we want more segments.\n",
         "3. If we look at both of the graphs at the same time to decide the optimal number of clusters, we can take the intersection of set of good n_clusters obtained from both the graphs. So 4 appears to be a good choice, having a decent Silhouette score as well as near the elbow of the elbow curve."
       ],
       "metadata": {
@@ -2439,7 +2438,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 99,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2512,7 +2511,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 100,
+      "execution_count": null,
       "metadata": {
         "id": "dPMdRv2TXQbI",
         "colab": {
@@ -2580,7 +2579,7 @@
         "id": "2mrF8MZSmGSQ",
         "outputId": "413f051c-ec72-4124-bd5d-cd807a78d913"
       },
-      "execution_count": 101,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2619,7 +2618,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 102,
+      "execution_count": null,
       "metadata": {
         "id": "IWJ-YOVfqtaS",
         "colab": {
@@ -2689,7 +2688,7 @@
         "id": "U-kg7gH91-O1",
         "outputId": "99a01118-8873-4678-c78f-9e236243496e"
       },
-      "execution_count": 103,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
